# bazel-playground

./: README.md  WORKSPACE.bazel
src/calculator/: BUILD.bazel  calculator_test.py
src/web/: BUILD.bazel  main.py
