load("@python_deps//:requirements.bzl", "requirement")
load("@io_bazel_rules_docker//python3:image.bzl", "py3_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

container_image(
    name = "python3_base",
    base = "@python3_slim_base//image",
    ports = ["8000"],
    symlinks = {
        "/usr/bin/python": "/usr/local/bin/python",
        "/usr/bin/python3": "/usr/local/bin/python3",
    },
)

py3_image(
    name = "main_image",
    srcs = ["main.py"],
    base = "//src/web:python3_base",
    layers = [
        "//src/calculator",
        requirement("fastapi"),
        requirement("uvicorn"),
    ],
    main = "main.py",
)

container_push(
    name = "push_image",
    format = "Docker",
    image = ":main_image",
    registry = "index.docker.io",
    repository = "minev/bazel-web",
    tag = "dev",
)
